fix: reduce navbar padding on mobile devices

--- a/web/src/styles/Header.scss
+++ b/web/src/styles/Header.scss
@@ -97,6 +97,9 @@
     }
 
     @media (max-width: 900px) {
+
+        padding: 1rem 1.5rem;
+        
         .desktop-only {
             display: none;
         }
